--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 markdown-it-py==3.0.0
+matplotlib==3.8.2
 MarkupSafe==2.1.4
 mdurl==0.1.2
 numpy==1.26.3
@@ -34,6 +35,7 @@ referencing==0.33.0
 requests==2.31.0
 rich==13.7.0
 rpds-py==0.17.1
+seaborn==0.13.2
 six==1.16.0
 smmap==5.0.1
 streamlit==1.30.0
